crates/formatter/tests/snapshots/snapshots__synapse__main__delta__51__e2e_room_keys.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2017 New Vector Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- users' optionally backed up encrypted e2e sessions
create table e2e_room_keys (
	user_id text not null,
	room_id text not null,
	session_id text not null,
	version text not null,
	first_message_index int,
	forwarded_count int,
	is_verified boolean,
	session_data text not null
);

create unique index e2e_room_keys_idx
	on e2e_room_keys (user_id, room_id, session_id);

-- the metadata for each generation of encrypted e2e session backups
create table e2e_room_keys_versions (
	user_id text not null,
	version text not null,
	algorithm text not null,
	auth_data text not null,
	deleted smallint not null default 0
);

create unique index e2e_room_keys_versions_idx
	on e2e_room_keys_versions (user_id, version);
